Altered script on header page to prevent body content from misaligning.

--- a/css/style.css
+++ b/css/style.css
@@ -205,14 +205,6 @@ body {
   overflow-x: hidden;
   background: #eeeeee;
   color: #00000087;
-  padding-top: 77px;
-}
-
-/* Prevents body content from overlapping with nav bar */
-@media screen and (max-width: 370px) {
-  body {
-    padding-top: 0px;
-  }
 }
 
 h2,
